# vid-query

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  rag_using_langchain.ipynb  requirements.txt
backend/app/: __init__.py  main.py
backend/app/models/: schemas.py
backend/app/routes/: analyze.py  chat.py
backend/app/services/: analyze_service.py  embedding_service.py  eval_service.py  llm_service.py  rag_chain.py  transcript_fetcher.py
backend/experimentation/: langsmith_evaluation.ipynb  rag_using_langchain.ipynb
chrome-extension/: package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
chrome-extension/public/: manifest.json
chrome-extension/src/: App.tsx
chrome-extension/src/components/: Header.tsx
chrome-extension/src/views/: ChatInterface.tsx
