[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.12.14",
    "aiosignal>=1.4.0",
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "async-timeout>=5.0.1",
    "attrs>=25.3.0",
    "certifi>=2025.7.14",
    "charset-normalizer>=3.4.2",
    "click>=8.2.1",
    "dataclasses-json>=0.6.7",
    "defusedxml>=0.7.1",
    "exceptiongroup>=1.3.0",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "filelock>=3.18.0",
    "frozenlist>=1.7.0",
    "fsspec>=2025.7.0",
    "greenlet>=3.2.3",
    "h11>=0.16.0",
    "hf-xet>=1.1.5",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.1",
    "huggingface-hub>=0.33.4",
    "idna>=3.10",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.71",
    "langchain-text-splitters>=0.3.8",
    "langsmith>=0.4.8",
    "marshmallow>=3.26.1",
    "multidict>=6.6.3",
    "mypy-extensions>=1.1.0",
    "numpy>=2.3.1",
    "openevals>=0.1.0",
    "orjson>=3.11.0",
    "packaging>=25.0",
    "propcache>=0.3.2",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "requests-toolbelt>=1.0.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.41",
    "starlette>=0.47.2",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.1",
    "typing-inspect>=0.9.0",
    "typing-inspection>=0.4.1",
    "urllib3>=2.5.0",
    "uvicorn>=0.35.0",
    "yarl>=1.20.1",
    "youtube-transcript-api>=1.2.1",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
